# c-binance-futures-quant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  INSIGHT.md  README.md  UPGRADE_PLAN.md  commonFunction.py  docker-compose.yml  infra_client.py  pyproject.toml  run_web_server.py  settings.py  simpleTrade.py  webServer.py
.plans/: config-and-infra-migration.md  react-front-rewrite.md  rust-ws-server-rewrite.md
afterTrade/: positionRecord.py  tradesUpdate.py  webOssUpdate.py
alembic/: env.py
alembic/versions/: 280092e4b641_drop_user_table.py  9783ae42b07c_initial_schema.py  d06ff177ba08_convert_time_string_fields_to_.py  e358e791b829_drop_chat_and_visitor_tables.py  ff88280b01a3_add_new_tables_and_model_field_updates.py
app/: database.py
app/models/: __init__.py  begin_trade_record.py  chat.py  commission.py  commission_temp_income.py  income.py  income_day.py  income_history_take.py  income_history_take_day.py  loss_limit_time.py  machine_status.py  order.py  position_record.py  trade.py  trade_record.py  trade_server_status.py  trade_symbol.py  trades.py  trades_take.py  user.py  visitor.py
binance_f/impl/: tradeServer.py  websocketconnection.py  websocketwatchdog.py
dataPy/: oneMinKlineToWs.py  specialOneMinKlineToWs.py  tickToWs.py  uploadDataPy.py  useData.py
docs/: TODO.md  frontend-parity-audit.md  roadmap.md
docs/adr/: 0001-jsonl-for-phase-2a-dry-run-intents.md
docs/agents/: domain.md
docs/plans/: config-and-infra-migration.md  repo-layout-reorganization.md  rust-ws-server-rewrite.md
frontend/web-front/: README.md
keyPy/: binanceOrdersRecord.py  binanceTradesRecord.py  checkTimeoutOrders.py  commission.py  getBinancePosition.py  makerStopLoss.py  positionRisk.py  wsPosition.py
legacy/: wsServer.cpp
legacy/react-front/: README.md  webpack.config.babel.js
react-front/: README.md
scripts/: seed_demo_dashboard_data.py
tests/: test_dashboard.py  test_database.py  test_infra_client.py  test_models.py  test_queries.py  test_settings.py  test_web_server.py
tool/: binanceSpeedTest.py  tickbookerSpeedTest.py
updateSymbol/: updateTradeSymbol.py
web-front/: README.md  package-lock.json  package.json
web_server/: app.py  binance_helpers.py  state.py
ws-server/: Dockerfile
ws/ws-server/: Cargo.toml
ws/ws-server/src/: main.rs  protocol.rs
ws/ws-server/tests/: integration_test.rs
(+57 files in other folders)
