[project]
name = "c-binance-futures-quant"
version = "0.1.0"
description = "Binance Futures quantitative trading framework"
requires-python = ">=3.14"
dependencies = [
    "mysql-connector-python",
    "websocket-client",
    "numpy",
    "APScheduler",
    "bottle",
    "paramiko",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-ecs",
    "requests",
    "oss2",
    "pydantic-settings>=2.13.1",
]
